Merge des branches et updates